Jun 02, 2023
  CurationDafGenerator -- updated to schema 1.7.3
    disease_genetic_modifier_curie ==> disease_genetic_modifier_curies

May 25, 2023
  CurationDafGenerator -- moved hard-coded qualifier mappings into properties file
    changed the qualifiers as follows (per SCRUM-2824):
      onset               ==> onset_of
      severity            ==> severity_of
      sexual_dimorphism   ==> sexual_dimorphism_in
      susceptibility      ==> susceptibility_to
      penetrance          ==> penetrance_of
      disease_progression ==> disease_progression_of
      resistance          ==> resistance_to

May 16, 2023
  CurationDafGenerator -- now providing DataProviderDTO.cross_reference_dto data for RGD (OMIM xref data still missing)
  CurationAlleleGenerator -- added DataProviderDTO
  CurationAGMGenerator -- added DataProviderDTO
  CurationGeneGenerator -- added DataProviderDTO -- discontinued 'gene_systematic_name_dto'

May 12, 2023
  CurationDafGenerator -- fixed generation of notes field
  CurationDafGenerator -- added support for DataProviderDTO

Mar 22, 2023
  CurationDafGenerator -- suppressed generation of 'condition_free_text' fields to avoid having
    duplicate text in summaries on the Alliance website
    -- suppress generation of 'with_gene_curies' having RGD ids

Feb 23, 2023
  CurationGeneGenerator -- fixed an issue with gene_full_name_dto fields

Feb 17, 2023
  CurationDafGenerator -- added special rules for handling IGI annotations

Feb 14, 2023
  CurationDafGenerator -- upgraded to linkml_model 1.5.0

Feb 08, 2023
  CurationAlleleGenerator -- upgraded to linkml_model 1.5.0

Feb 02, 2023
  CurationGeneGenerator -- upgraded to linkml_model 1.5.0
  CurationAGMGenerator -- upgraded to linkml_model 1.5.0

Dec 05, 2022
  CurationAlleleGenerator -- linkml_model 1.3.2: added export of 'references'

Nov 11, 2022
  updated script to submit HTVCF data

Nov 10, 2022
  VariantVcfGenerator - added export of EVA rn7 in last column and rs ids in ID column
